test/chainsaw/authpolicy/path_validation/authpolicy-new-path-syntax-valid.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy-valid-new-syntax
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - /foo/{*}
        - /foo/{**}
        - /foo/{*}/bar/{**}
  audience:
    - entraid_server
  wellKnownUri: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
