test/chainsaw/authpolicy/path_validation/authpolicy-old-path-syntax-invalid.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: asterix-in-path
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - /asterix/*/in/path
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
