test/chainsaw/authpolicy/path_validation/authpolicy-old-path-syntax-valid.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy-valid-old-syntax
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - '*/prefix'
        - /suffix*
        - '*'
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
