test/chainsaw/authpolicy/path_validation/authpolicy-new-path-syntax-invalid-assert.yaml
---
# AuthorizationPolicy (deny-auth-rules)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: single-asterix-not-alone-in-segment-deny-auth-rules
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths:
              - '*'
  selector:
    matchLabels:
      app: application
---
---
# AuthorizationPolicy (deny-auth-rules)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: wildcard-after-double-asterix-deny-auth-rules
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths:
              - '*'
  selector:
    matchLabels:
      app: application
---
