test/chainsaw/authpolicy/path_validation/authpolicy-new-path-syntax-valid-assert.yaml
# RequestAuthentication
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy-valid-new-syntax
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  jwtRules:
    - audiences:
        - entraid_server
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (ignore-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-valid-new-syntax-ignore-auth
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  rules:
    - to:
        - operation:
            paths:
            - /
            - /{*}
            - /{**}
            - /foo
            - /foo-bar
            - /foo%20bar
            - /foo/bar
            - /foo/bar/
            - /foo/{*}
            - /foo/{**}
            - /foo/{*}/bar/{*}
            - /foo/{*}/bar%20baz/{*}
            - /foo/{*}/bar/{**}
            - /foo*
            - /foo/bar*
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (require-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-valid-new-syntax-require-auth
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  rules:
    - to:
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
            - /
            - /{*}
            - /{**}
            - /foo
            - /foo-bar
            - /foo%20bar
            - /foo/bar
            - /foo/bar/
            - /foo/{*}
            - /foo/{**}
            - /foo/{*}/bar/{*}
            - /foo/{*}/bar%20baz/{*}
            - /foo/{*}/bar/{**}
            - /foo*
            - /foo/bar*
        - operation:
            notPaths:
            - /
            - /{*}
            - /{**}
            - /foo
            - /foo-bar
            - /foo%20bar
            - /foo/bar
            - /foo/bar/
            - /foo/{*}
            - /foo/{**}
            - /foo/{*}/bar/{*}
            - /foo/{*}/bar%20baz/{*}
            - /foo/{*}/bar/{**}
            - /foo*
            - /foo/bar*
            paths:
              - '*'
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
  selector:
    matchLabels:
      app: application
---
