test/chainsaw/authpolicy/path_validation/authpolicy-old-path-syntax-invalid-assert.yaml
---
# AuthorizationPolicy (deny-auth-rules)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: asterix-in-path-deny-auth-rules
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths:
              - '*'
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (deny-auth-rules)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: only-asterix-deny-auth-rules
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths:
              - '*'
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (deny-auth-rules)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: leading-asterix-deny-auth-rules
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths:
              - '*'
  selector:
    matchLabels:
      app: application
---
