test/chainsaw/authpolicy/path_validation/authpolicy-old-path-syntax-valid-assert.yaml
# RequestAuthentication
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy-valid-old-syntax
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  jwtRules:
    - audiences:
        - entraid_server
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (ignore-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-valid-old-syntax-ignore-auth
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  rules:
    - to:
        - operation:
            paths:
              - /prefix/*
              - /anotherprefix*
              - /*
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (require-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-valid-old-syntax-require-auth
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  rules:
    - to:
        - operation:
            notMethods:
              - GET
              - POST
              - PUT
              - PATCH
              - DELETE
              - HEAD
              - OPTIONS
              - TRACE
              - CONNECT
            paths:
              - /prefix/*
              - /anotherprefix*
              - /*
        - operation:
            notPaths:
              - /prefix/*
              - /anotherprefix*
              - /*
            paths:
              - '*'
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - entraid_server
  selector:
    matchLabels:
      app: application
---
