test/chainsaw/authpolicy/path_validation/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: path-validation
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - error:
            file: authpolicy-mixing-path-syntax.yaml
        - error:
            file: authpolicy-new-path-syntax-invalid.yaml
        - create:
            file: authpolicy-new-path-syntax-valid.yaml
        - assert:
            file: authpolicy-new-path-syntax-valid-assert.yaml
        - error:
            file: authpolicy-old-path-syntax-invalid.yaml
        - create:
            file: authpolicy-old-path-syntax-valid.yaml
        - assert:
            file: authpolicy-old-path-syntax-valid-assert.yaml
